syntax = "proto3";
option go_package ="github.com/aph138/shop/stock_grpc";

service Stock{
    rpc AddItem(Item) returns (AddItemResponse);
    rpc GetItem(GetItemRequest) returns (Item);
    rpc GetItemList(GetItemListRequest) returns(stream GetItemListResponse);
}

message Item{
    string id=1;
    string name=2;
    int32 number=3;
    string description=4;
    float price=5;
    repeated string photos=6;
}
message AddItemResponse{
    bool result=1;
}

message GetItemRequest{
    string id=1;
}
message GetItemListRequest{
    int64 offset=1;
    int64 limit=2;
}
message GetItemListResponse{
    string name=1;
    int32 number=2;
    string description=3;
    float price=4;
    string photo=5;
}

